# letsgrow-saas-platform

./: .env.example  COLLABORATION_ISSUE.md  DEPLOYMENT.md  LETSGROW_DEVELOPMENT_ROADMAP.md  PROJECT_ARCHITECTURE.md  README.md  TASK_IMPLEMENTATION_LOG.md  TASK_LOG.md  demo-upload.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  replit.md  server_tasklogs.md  setup.sh  upload_to_github.py
.upm/: store.json
backend/: .env.example  .env.template  Dockerfile  app.py  requirements.txt  run.py  wsgi.py
backend/app/: __init__.py
backend/app/api/: advanced.py  analytics.py  auth.py  automation.py  automations.py  billing.py  content.py  lab.py  remote_access.py  setup.py  social.py  users.py
backend/app/config/: settings.py
backend/app/models/: __init__.py  analytics.py  automation.py  background_jobs.py  content.py  post.py  social_accounts.py  subscription.py  user.py
backend/app/routes/: health.py  unrestricted_api.py
backend/app/services/: ai_content_service.py  audience_analyzer.py  automation_engine.py  brand_voice_analyzer.py  collab_engine.py  growth_bot.py  multilang_service.py  niche_intelligence.py  personal_account_analyzer.py  recommendation_engine.py  team_collaboration.py  viral_predictor.py  voice_engine.py
backend/app/tasks/: content_tasks.py
backend/app/utils/: encryption.py  helpers.py  validators.py
backend/migrations/versions/: 9d516fc39939_add_all_remaining_tables.py  add_social_accounts_posts_tables.py  (+1 more)
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  startup.sh  tailwind.config.js  tsconfig.json
(+50 files in other folders)
