[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography==41.0.3",
    "flask-mail==0.9.1",
    "flask==2.3.2",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "flask-login==0.6.3",
    "flask-cors==4.0.0",
    "urllib3==2.0.4",
    "sqlalchemy==2.0.19",
    "tiktoken==0.4.0",
    "pandas==2.0.3",
    "marshmallow==3.20.1",
    "pytest-flask==1.2.0",
    "structlog==23.1.0",
    "tweepy==4.14.0",
    "python-dateutil==2.8.2",
    "flask-limiter==3.3.1",
    "pillow==10.0.0",
    "webargs==8.2.0",
    "flask-migrate==4.0.4",
    "psycopg2-binary==2.9.7",
    "celery==5.3.1",
    "pyjwt==2.8.0",
    "requests==2.31.0",
    "numpy==1.24.3",
    "flask-sqlalchemy==3.0.5",
    "redis==4.6.0",
    "bcrypt==4.0.1",
    "openai==0.27.8",
    "pytest==7.4.0",
    "factory-boy==3.3.0",
    "faker==19.3.0",
    "python-instagram==1.3.2",
    "click==8.1.6",
    "werkzeug==2.3.7",
]
